CKA-training-code/13-node-selector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodeselector-pod
spec:
  nodeSelector:
    special: "true"
  containers:
    - name: nginx
      image: nginx:1.19.1
