CKA-training-code/13-nodename-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodename-pod
spec:
  nodeName: 19f13e95c91c.mylabserver.com
  containers:
  - name: nginx
    image: nginx:1.19.1
