CKA-training-code/9-Pod-Always.yaml
apiVersion: v1
kind: Pod
metadata:
  name: always-pod
spec:
  restartPolicy: Always
  containers:
    - name: busybox
      image: busybox
      command: ['sh', '-c', 'sleep 10']
