CKA-training-code/9-Pod-OnFailure.yaml
apiVersion: v1
kind: Pod
metadata:
   name: onfailure-pod
spec:
  restartPolicy: OnFailure
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'sleep 10']
